add keypairing memo

--- a/doc/2401_memo.md
+++ b/doc/2401_memo.md
@@ -136,8 +136,31 @@ Generate Partner Token -> Register
 command側はセキュリティ強化のため、車両アクセス時に車両側でアプリ認証を行う。
 追加でいろいろセットアップが必要
 
-公式：https://developer.tesla.com/docs/fleet-api/endpoints/vehicle-commands#:~:text=Vehicle%20commands%20allow%20direct%20interaction%20with%20a%20vehicle.%20To%20accept%20commands%2C%20a%20vehicle%20must%20have%20an%20application%27s%20Fleet%20Key%20installed.%20The%20command%20must%20be%20sent%20through%20the%20Vehicle%20Commands%20Proxy%20to%20send%20commands.
-公式：https://github.com/teslamotors/vehicle-command
+公式[4]：https://developer.tesla.com/docs/fleet-api/endpoints/vehicle-commands#:~:text=Vehicle%20commands%20allow%20direct%20interaction%20with%20a%20vehicle.%20To%20accept%20commands%2C%20a%20vehicle%20must%20have%20an%20application%27s%20Fleet%20Key%20installed.%20The%20command%20must%20be%20sent%20through%20the%20Vehicle%20Commands%20Proxy%20to%20send%20commands.
+公式[5]：https://github.com/teslamotors/vehicle-command
+[6]https://shankarkumarasamy.blog/2024/01/28/tesla-developer-api-guide-ble-key-pair-auth-and-vehicle-commands-part-3/
+[7]https://shankarkumarasamy.blog/2024/02/25/tesla-developer-api-guide-http-proxy-server-integration-part-4/
 
-https://shankarkumarasamy.blog/2024/01/28/tesla-developer-api-guide-ble-key-pair-auth-and-vehicle-commands-part-3/
-https://shankarkumarasamy.blog/2024/02/25/tesla-developer-api-guide-http-proxy-server-integration-part-4/
+[5]に従って進める
+環境：Docker WSL2（[参照](https://qiita.com/hoshimado/items/51c99ccaee3d4222d99d#windows%E7%92%B0%E5%A2%83%E3%81%A7%E3%81%AEdocker%E3%81%AE%E6%A7%8B%E6%88%90)）
+
+## Installing with Docker
+そのまま
+
+## Using the HTTP proxy
+そのまま
+
+### Obtaining OAuth access tokens
+[上記](###4.-サードパーティトークンを生成)で取得済みのため割愛
+
+### Generating a command-authentication private key
+上記で取得したが、再度秘密鍵の作成が必要（おそらくプロキシでこの秘密鍵を使えるように）
+エラー出ているが公開鍵は作成された
+
+### Distributing your public key
+[上記](###3.-Public-Key・Private-Key-ペアを作成・ホストする)と同じ手順で再度公開鍵をWebサーバに配置
+
+### Generating a server TLS key and certificate
+そのまま
+
+### Running the proxy server
